# learn-rt

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  aabb.h  aabb.hpp  bvh.hpp  bvh_node.h  bvh_node.hpp  camera.h  camera.hpp  common.h  common.hpp  hittable.h  hittable.hpp  main.cpp  material.h  material.hpp  parser.h  parser.hpp  ray.h  ray.hpp  rectangle.hpp  scene.final.toml  scene.mesh.toml  scene.meshes.toml  scene.obj.toml  scene.sphere.toml  scene.toml  scene.triangle.toml  sphere.h  sphere.hpp  texture.hpp  tracer.h  tracer.hpp  triangle.hpp  utils.h  utils.hpp  viewport.h  (+1 more)
assets/nightstand/: Wood029_2K-JPG.usda  Wood029_2K-JPG.usdc  nightstand.mtl
include/: aabb.hpp  bvh.hpp  camera.hpp  common.hpp  hittable.hpp  material.hpp  parser.hpp  ray.hpp  rectangle.hpp  sphere.hpp  texture.hpp  tracer.hpp  triangle.hpp  utils.hpp
src/: bvh.cpp  hittable.cpp  main.cpp  material.cpp  parser.cpp  rectangle.cpp  sphere.cpp  triangle.cpp  utils.cpp
